[package]
name = "serde-hjson"
version = "0.9.1"
authors = ["Christian Zangl <laktak@cdak.net>"]
license = "MIT"
description = "Hjson serialization file format"
repository = "https://github.com/hjson/hjson-rust"
#documentation = "https://hjson.github.io/hjson-rust/"
readme = "../README.md"
keywords = ["hjson", "json", "serde", "serialization"]

[features]
unstable-testing = ["clippy"]
preserve_order = ["linked-hash-map", "linked-hash-map/serde_impl"]
default = ["preserve_order"]

[dependencies]
serde = "^0.8.0"
num-traits = "~0.1.32"
regex = "^1.0"
lazy_static = "1"
clippy = { version = "^0.*", optional = true }
linked-hash-map = { git = "https://github.com/Yarn/linked-hash-map.git", rev = "7ff344de63a2480ec417f3d10601f6b9d7396d49", optional = true }
